--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,7 +31,7 @@
 
 
   <p-dialog header="搜索结果" [(visible)]="isShowModel" [style]="{width: '450px'}" [baseZIndex]="10000">
-    <app-show-info-detail [title]="title" [subTitle]="subTitle" [avatarUrl]="avatarUrl" [description]="description"></app-show-info-detail>
+    <app-show-info-detail [title]="title" [subTitle]="subTitle" [avatarUrl]="avatarUrl" [description]="description" [phone]="phone"></app-show-info-detail>
   </p-dialog>
   <!-- <app-show-info-detail title="羊群公社" subTitle="上海教会" avatarUrl="http://alioss.yangqungongshe.com/files/images/17.jpg" description="哈哈哈"></app-show-info-detail> -->
   
