--- a/src/app/common/components/show-info-detail/show-info-detail.component.html
+++ b/src/app/common/components/show-info-detail/show-info-detail.component.html
@@ -2,5 +2,6 @@
   <ng-template pTemplate="header">
       <img alt="Card" [src]="avatarUrl">
   </ng-template>
+  <p>负责人手机号：{{phone}}</p>
   <p>{{description}}</p>
 </p-card>
