--- a/src/app/pages/modules/common/guildmember-list/guildmember-list.component.html
+++ b/src/app/pages/modules/common/guildmember-list/guildmember-list.component.html
@@ -33,7 +33,8 @@
                                 <td>{{guildMember.phoneNumber}}</td>
                                 <td>{{guildMember.role==2?'教会管理员':guildMember.role==1?'同工':'普通成员'}}</td>
                                 <td [ngStyle]="{'color': guildMember.status!=0?'red':'green'}">{{guildMember.status| dashboardspipe:"guildMemberStatus"}}</td>
-                                <td>{{guildMember.modifiedDate |showTime:'加入'}}</td>
+                                <!-- <td>{{guildMember.modifiedDate |showTime:'加入'}}</td> -->
+                                <td><app-china-datetime-text [value]="guildMember.modifiedDate" textColor="red" prefixName="用户加入"></app-china-datetime-text></td>
                                 <td> <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-mr-2"  ></button></td>
                             </tr>
                         </ng-template>
