--- a/src/app/pages/modules/dashboards/account/account.component.html
+++ b/src/app/pages/modules/dashboards/account/account.component.html
@@ -64,7 +64,8 @@
                 </td>
                 <td>{{account.isCloudChurchAdmin?'是':'否'}}</td>
                 <td>{{account.lastUsingGuildId}}</td>
-                <td>{{account.userCreatedTime |showTime:'用户创建'}}</td>
+                <!-- <td>{{account.userCreatedTime |showTime:'用户创建'}}</td> -->
+                <td><app-china-datetime-text [value]="account.userCreatedTime" textColor="red" prefixName="用户创建"></app-china-datetime-text></td>
                 <td style="word-wrap: normal !important;word-break: normal !important;">
                   <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-mr-2" ></button>
                 </td>
