--- a/src/app/pages/modules/dashboards/notification/notification.component.html
+++ b/src/app/pages/modules/dashboards/notification/notification.component.html
@@ -45,7 +45,8 @@
                 <td><a style="text-decoration: none;" href="javascript:" tooltipPosition="top" [pTooltip]="notification.description||'未发布简介'">{{notification.title}}</a></td>
                 <td><a href='javascript:' (click)="openFiles(notification)" >{{notification.files.length}}</a></td>
                 <td><img *ngIf="notification.avatarUrl!=null" [src]='notification.avatarUrl' style="height: 100px;object-fit: cover;width: 100px;"/></td>
-                <td>{{notification.createdDate  | chinaTime}}</td>
+                <!-- <td>{{notification.createdDate  | chinaTime}}</td> -->
+                <td><app-china-datetime-text [value]="notification.createdDate" textColor="red" prefixName="通知创建"></app-china-datetime-text></td>
                 <td>{{notification.status | dashboardspipe:"notificationStatus"}}</td>
                 <td>{{notification.creatorId}}</td>
                 <td><a href='javascript:' (click)="openDialog(notification,0)" >{{notification.viewedReceiversCount}}</a></td>
