--- a/src/app/pages/modules/dashboards/guild-lazy/guild-lazy.component.html
+++ b/src/app/pages/modules/dashboards/guild-lazy/guild-lazy.component.html
@@ -12,7 +12,7 @@
   </ng-template>
     <ng-template pTemplate="header">
         <tr>
-          <th pSortableColumn="guildId">教会ID <p-sortIcon field="guildId"></p-sortIcon></th>
+          <th pSortableColumn="Id">教会ID <p-sortIcon field="Id"></p-sortIcon></th>
                 <th>教会名称 </th>
                 <th>教会头像 </th>
                 <th>教会地址 </th>
@@ -21,7 +21,7 @@
                 <th>教会所属人ID</th>
                 <th>教会直播流量</th>
                 <th>教会文件</th>
-                <th pSortableColumn="violationCount">违规次数 <p-sortIcon field="violationCount"></p-sortIcon></th>
+                <th>违规次数</th>
                 <th pSortableColumn="membersCount">成员人数 <p-sortIcon field="membersCount"></p-sortIcon></th>
                 <th>教会通知 </th>
                 <th>教会讨论</th>
