--- a/src/app/pages/modules/basic-data/components/basic-list/basic-list.component.scss
+++ b/src/app/pages/modules/basic-data/components/basic-list/basic-list.component.scss
@@ -36,6 +36,16 @@
     overflow: hidden;
   }
 
+  .call-container{
+    display: inline-block;
+    position: relative;
+    left: 30%;
+
+    i{
+      margin: 0px 5px;
+      cursor: pointer;
+    }
+  }
   // .tree-box:last-child {
   //   border: none;
   // }
